# 2D_Engine

./: CMakeLists.txt  vcpkg.json
assets/scenes/: Example.engine  Untitled.engine  Untitled2.engine  pinkCube.engine
assets/shaders/: Texture.glsl
editor/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.hpp  FileDialog.cpp  FileDialog.hpp
editor/panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
sandbox/: SandBox.cpp  SandBox2D.cpp  SandBox2D.hpp
src/: Base.hpp  Engine.hpp  Input.hpp  Log.cpp  Log.hpp  TimeStep.hpp  Window.cpp  Window.hpp  WindowGLFW.cpp  WindowGLFW.hpp  WindowInput.cpp  WindowInput.hpp  application.cpp  application.hpp  entry.hpp
src/events/: ApplicationEvent.hpp  Event.hpp  KeyCode.hpp  KeyEvent.hpp  MouseCodes.hpp  MouseEvent.hpp
src/layers/: ImGuiEx.cpp  ImGuiEx.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
src/renderer/: Buffer.cpp  Buffer.hpp  Camera.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsContext.hpp  OrthoCameraController.cpp  OrthoCameraController.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  SubTexture2D.cpp  SubTexture2D.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
src/renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
src/scene/: Components.hpp  Entity.cpp  Entity.hpp  Math.cpp  Math.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneSerializer.cpp  SceneSerializer.hpp
